# graphicseditor

./: .gitignore  CLAUDE.md  next.config.mjs  package-lock.json  package.json  plan-node-pipeline.md  projstructure.md  prompt.md  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
components/editor/: add-node-panel.tsx  connection-lines.tsx  glass-node.tsx  node-canvas.tsx  node-editor.tsx
hooks/: use-preview.ts
lib/: node-store.ts  node-types.ts  tauri-bridge.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  state.rs
src-tauri/src/graph/: cache.rs  executor.rs  mod.rs  types.rs
src-tauri/src/nodes/: blend.rs  color.rs  effect.rs  filter.rs  input.rs  mod.rs
