[package]
name = "prism"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
imageproc = "0.25"
fast_image_resize = "4"
base64 = "0.22"
rayon = "1"
# Pin time to last version with MSRV <= 1.86.0 (0.3.47+ requires 1.88.0)
time = "=0.3.36"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
